--- a/LibraryManagement/Views/Shared/Layout.cshtml
+++ b/LibraryManagement/Views/Shared/Layout.cshtml
@@ -58,11 +58,11 @@
 <body>
 
     <div class="sidebar">
-        <a href="#"><i class="glyphicon glyphicon-home"></i>&nbsp; Ana Sayfa</a>
+        <a href="/Home/Index/"><i class="glyphicon glyphicon-home"></i>&nbsp; Ana Sayfa</a>
         <a href="/Kategori/Index/"><i class="glyphicon glyphicon-list"></i>&nbsp; Kategoriler</a>
         <a href="/Kitap/Index/"><i class="glyphicon glyphicon-book"></i>&nbsp; Kitaplar</a>
         <a href="/Yazar/Index/"><i class="glyphicon glyphicon-pencil"></i>&nbsp; Yazarlar</a>
-        <a href="#"><i class="glyphicon glyphicon-user"></i>&nbsp; Üyeler</a>
+        <a href="/Üye/Index/"><i class="glyphicon glyphicon-user"></i>&nbsp; Üyeler</a>
         <a href="/Personel/Index/"><i class="glyphicon glyphicon-tower"></i>&nbsp; Personeller</a>
         <a href="#"><i class="glyphicon glyphicon-circle-arrow-right"></i>&nbsp; Ödünç Kitap Ver</a>
         <a href="#"><i class="glyphicon glyphicon-circle-arrow-left"></i>&nbsp; Ödünç Kitap Al</a>
