Ödünç kitap işlemleri.

--- a/LibraryManagement/Views/Personel/Index.cshtml
+++ b/LibraryManagement/Views/Personel/Index.cshtml
@@ -8,13 +8,13 @@
 }
 
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-
-<h2 style="text-align:center;">Kategorileri İşlemleri</h2>
-
+<br />
+<h2 style="text-align:center;">Personeller</h2>
+<br />
 
 <table class="table table-bordered">
     <tr>
-        <th>Kategori ID</th>
+        <th>Personel ID</th>
         <th>Personel Adı</th>
         <th>Sil</th>
         <th>Güncelle</th>
