--- a/LibraryManagement/Views/Üye/ÜyeEkle.cshtml
+++ b/LibraryManagement/Views/Üye/ÜyeEkle.cshtml
@@ -6,10 +6,12 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
+<br />
 
 <h2 style="text-align:center">Üye Ekle</h2>
+<br />
 
-<form style="margin-top:30px" class="form-group" method="post">
+<form class="form-group" method="post">
 
     <div>
         <label>Üye Adı</label>
