İşlemler ve Ödünç kısımları tamamlandı.

--- a/LibraryManagement/Views/Odunc/OduncVer.cshtml
+++ b/LibraryManagement/Views/Odunc/OduncVer.cshtml
@@ -33,4 +33,5 @@
         <input type="text" class="form-control" name="İadeTarih" value="@DateTime.Now.AddDays(7).ToShortDateString()" />
     </div>
     <button style="margin-top:20px;background-color:#a330b5;color:white;" class="btn btn-group">Kitap Ödünç Ver</button>
+    <input type="hidden" name="İslemDurum" value="false" />
 </form>
