--- a/LibraryManagement/Views/Shared/Layout.cshtml
+++ b/LibraryManagement/Views/Shared/Layout.cshtml
@@ -66,8 +66,9 @@
         <a href="/Personel/Index/"><i class="glyphicon glyphicon-tower"></i>&nbsp; Personeller</a>
         <a href="/Odunc/OduncVer/"><i class="glyphicon glyphicon-circle-arrow-right"></i>&nbsp; Ödünç Kitap Ver</a>
         <a href="/Odunc/Index/"><i class="glyphicon glyphicon-circle-arrow-left"></i>&nbsp; Ödünç Kitap Al</a>
-        <a href="#"><i class="glyphicon glyphicon-euro"></i>&nbsp; Kasa</a>
         <a href="/İslem/Index/"><i class="glyphicon glyphicon-dashboard"></i>&nbsp; İşlemler</a>
+        <a href="/İstatislik/Index/"><i class="glyphicon glyphicon-sort"></i>&nbsp; İstatislikler</a>
+        <a href="#"><i class="glyphicon glyphicon-euro"></i>&nbsp; Kasa</a>
         <a href="#"><i class="glyphicon glyphicon-picture"></i>&nbsp; Galeri</a>
         <a href="/Vitrin/Index/"><i class="glyphicon glyphicon-gift"></i>&nbsp; Vitrin</a>
         <a href="#"><i class="glyphicon glyphicon-cog"></i>&nbsp; Ayarlar</a>
