--- a/LibraryManagement/Views/Kategori/Index.cshtml
+++ b/LibraryManagement/Views/Kategori/Index.cshtml
@@ -12,7 +12,7 @@
 <h2 style="text-align:center;">Kategorileri İşlemleri</h2>
 <br />
 
-<table class="table table-bordered">
+<table class="table table-striped">
     <tr>
         <th>Kategori ID</th>
         <th>Kategori Adı</th>
