--- a/LibraryManagement/Views/Odunc/Index.cshtml
+++ b/LibraryManagement/Views/Odunc/Index.cshtml
@@ -11,7 +11,7 @@
 <br />
 
 
-<table class="table table-bordered">
+<table class="table table-striped">
     <tr>
         <th>İşlem ID</th>
         <th>Kitap Adı</th>
