--- a/LibraryManagement/Views/Personel/Index.cshtml
+++ b/LibraryManagement/Views/Personel/Index.cshtml
@@ -12,7 +12,7 @@
 <h2 style="text-align:center;">Personeller</h2>
 <br />
 
-<table class="table table-bordered">
+<table class="table table-striped">
     <tr>
         <th>Personel ID</th>
         <th>Personel Adı</th>
