--- a/LibraryManagement/Views/Shared/Layout.cshtml
+++ b/LibraryManagement/Views/Shared/Layout.cshtml
@@ -8,6 +8,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Kütüphane Yönetim</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -27,17 +28,17 @@
             padding-top: 16px;
         }
 
-        .sidebar a {
-            padding: 6px 8px 6px 16px;
-            text-decoration: none;
-            font-size: 17px;
-            color: white;
-            display: block;
-        }
+            .sidebar a {
+                padding: 6px 8px 6px 16px;
+                text-decoration: none;
+                font-size: 17px;
+                color: white;
+                display: block;
+            }
 
-        .sidebar a:hover {
-            color: #0005ff;
-        }
+                .sidebar a:hover {
+                    color: #0005ff;
+                }
 
         .main {
             margin-left: 240px;
@@ -49,9 +50,9 @@
                 padding-top: 15px;
             }
 
-            .sidebar a {
-                font-size: 18px;
-            }
+                .sidebar a {
+                    font-size: 18px;
+                }
         }
     </style>
 </head>
@@ -67,9 +68,11 @@
         <a href="/Odunc/OduncVer/"><i class="glyphicon glyphicon-circle-arrow-right"></i>&nbsp; Ödünç Kitap Ver</a>
         <a href="/Odunc/Index/"><i class="glyphicon glyphicon-circle-arrow-left"></i>&nbsp; Ödünç Kitap Al</a>
         <a href="/İslem/Index/"><i class="glyphicon glyphicon-dashboard"></i>&nbsp; İşlemler</a>
+        <a href="/İstatislik/Hava/"><i class="glyphicon glyphicon-cloud"></i>&nbsp; Hava Raporu</a>
+        <a href="/İstatislik/HavaKart/"><i class="glyphicon glyphicon-plus"></i>&nbsp; Hava Kartları</a>
         <a href="/İstatislik/Index/"><i class="glyphicon glyphicon-sort"></i>&nbsp; İstatislikler</a>
         <a href="#"><i class="glyphicon glyphicon-euro"></i>&nbsp; Kasa</a>
-        <a href="#"><i class="glyphicon glyphicon-picture"></i>&nbsp; Galeri</a>
+        <a href="/İstatislik/Galeri/"><i class="glyphicon glyphicon-picture"></i>&nbsp; Galeri</a>
         <a href="/Vitrin/Index/"><i class="glyphicon glyphicon-gift"></i>&nbsp; Vitrin</a>
         <a href="#"><i class="glyphicon glyphicon-cog"></i>&nbsp; Ayarlar</a>
         <a href="#"><i class="glyphicon glyphicon-phone"></i>&nbsp; Yardım</a>
