--- a/LibraryManagement/Views/Yazar/Index.cshtml
+++ b/LibraryManagement/Views/Yazar/Index.cshtml
@@ -15,8 +15,8 @@
 <br />
 
 
-<table class="table table-bordered">
-    <tr>
+<table class="table table-striped">
+    <tr style="background-color:aqua">
         <th>Yazar ID</th>
         <th>Yazar Ad</th>
         <th>Yazar Soyad</th>
