--- a/LibraryManagement/Views/Yazar/YazarGetir.cshtml
+++ b/LibraryManagement/Views/Yazar/YazarGetir.cshtml
@@ -19,10 +19,12 @@
     <div style="margin-top:15px;" class="form-group">
         <label>Yazar Ad</label>
         @Html.TextBoxFor(x => x.Ad, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.Ad)
     </div>
     <div style="margin-top:15px;" class="form-group">
         <label>Yazar Soyad</label>
         @Html.TextBoxFor(x => x.Soyad, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.Soyad)
     </div>
     <div style="margin-top:15px;" class="form-group">
         <label>Detay</label>
