--- a/LibraryManagement/Views/İstatislik/Index.cshtml
+++ b/LibraryManagement/Views/İstatislik/Index.cshtml
@@ -5,11 +5,41 @@
 }
 
 <link href="~/web2/css/style.css" rel="stylesheet" />
+<link href="~/web2/css/jqvmap.css" rel="stylesheet" />
 
 
 <script src="~/web2/js/Chart1.js"></script>
+<script src="~/web2/js/jquery.min.js"></script>
+<script src="~/web2/js/jquery.vmap.js"></script>
+<script src="~/web2/js/jquery.vmap.sampledata.js"></script>
+<script src="~/web2/js/jquery.vmap.world.js"></script>
 
 
+<script type="text/javascript">
+    jQuery(document).ready(function () {
+        jQuery('#vmap').vectorMap({
+            map: 'world_en',
+            backgroundColor: '#333333',
+            color: '#ffffff',
+            hoverOpacity: 0.7,
+            selectedColor: '#666666',
+            enableZoom: true,
+            showTooltip: true,
+            values: sample_data,
+            scaleColors: ['#C8EEFF', '#006491'],
+            normalizeFunction: 'polynomial'
+        });
+    });
+</script>
+<script>
+    $(document).ready(function (c) {
+        $('.alert-close6').on('click', function (c) {
+            $('.world-map').fadeOut('slow', function (c) {
+                $('.world-map').remove();
+            });
+        });
+    });
+</script>
 
 <div class="list_of_members">
 
@@ -109,6 +139,46 @@
                 <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i> </i>Yeni Kitap girişi.</label>
             </div>
         </div>
+    </div>
+    <div class="clearfix"></div>
+</div>
+
+<div class="total-world">
+    <div class="world-map">
+        <div class="alert-close6"> </div>
+        <h3>Dünya Haritası</h3>
+        <p><span class="color1"></span>40%<span class="color2"></span>12%<span class="color3"></span>11%<span class="color4"></span>10%<span class="color5"></span>18%</p>
+        <div class="clearfix"></div>
+        <div id="vmap" style="width: 600px; height: 400px;"></div>
+    </div>
+    <div class="site-report">
+        <div class="alert-close3"> </div>
+        <h3>Sistem Raporları</h3>
+        <div class="skills-top">
+            <h5>Memnuniyet</h5>
+            <h4>96%</h4>
+            <div class="clearfix"></div>
+            <div class="skills">
+                <div class="skill" style="width:96%"></div>
+            </div>
+        </div>
+        <div class="skills-top">
+            <h5>Güvenilirlik</h5>
+            <h4>89%</h4>
+            <div class="clearfix"></div>
+            <div class="skills">
+                <div class="skill1" style="width:89%"></div>
+            </div>
+        </div>
+        <div class="skills-top">
+            <h5>Haftalık geri dönüş</h5>
+            <h4>76%</h4>
+            <div class="clearfix"></div>
+            <div class="skills">
+                <div class="skill2" style="width:76%"></div>
+            </div>
+        </div>
+        <p>Kütüphane yönetim sistemi projemizin admin paneli kısmındasınız. İyi okumalar.</p>
     </div>
     <div class="clearfix"></div>
 </div>
