--- a/LibraryManagement/Views/Kitap/Index.cshtml
+++ b/LibraryManagement/Views/Kitap/Index.cshtml
@@ -19,7 +19,7 @@
 }
 
 
-<table class="table table-bordered">
+<table class="table table-striped">
     <tr>
         <th>ID</th>
         <th>Kitap Adı</th>
