--- a/LibraryManagement/Views/Üye/Index.cshtml
+++ b/LibraryManagement/Views/Üye/Index.cshtml
@@ -17,7 +17,7 @@
 <br />
 
 
-<table class="table table-bordered">
+<table class="table table-striped">
     <tr>
         <th>Üye ID</th>
         <th>Üye Adı</th>
