--- a/LibraryManagement/Views/İslem/Index.cshtml
+++ b/LibraryManagement/Views/İslem/Index.cshtml
@@ -12,7 +12,7 @@
 <br />
 
 
-<table class="table table-bordered">
+<table class="table table-striped">
     <tr>
         <th>İşlem ID</th>
         <th>Kitap Adı</th>
